syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

option go_package = "proto";
option csharp_namespace = "proto";

message SneakerProduct {
  string uniqueId = 1;
  string brandName = 2;
  string modelName = 3;
  string modelSKU = 4;
  string referenceId = 5;
  double price = 6;
  string type = 7;
  SneakerSize size = 8;
  string color = 9;
  string condition = 10;
  string description = 11;
  string owner = 12;
  double conditionIndex = 14;
  google.protobuf.Timestamp addedAt = 15;
}

message SneakerSize {
  double europe = 1;
  double unitedStates = 2;
  double unitedKingdom = 3;
  double centimeters = 4;
}

message SneakerBrand {
  string uniqueId = 1;
  string name = 2;
  string logo = 3;
  string hero = 4;
  string description = 5;
}

message SneakerModel {
  string uniqueId = 1;
  string name = 2;
  string brand = 3;
  string baseModel = 4;
  string hero = 5;
  string description = 6;
}

message SneakerReference {
  string uniqueId = 1;
  string manufactureSku = 2;
  string brandName = 3;
  SneakerBrand brand = 4;
  string modelName = 5;
  SneakerModel model = 6;
  string baseModelName = 7;
  SneakerModel baseModel = 8;
  string description = 9;
  string color = 10;
  string gender = 11;
  string nickname = 12;
  repeated string materials = 13;
  repeated string categories = 14;
  google.protobuf.Timestamp releaseDate = 15;
  double price = 16;
  string imageLink = 17;
  repeated string imageLinks = 18;
  string stadiumUrl = 19;
  int64 likes = 20;
  bool liked = 21;
}

service SearchReferencesService {
  rpc Search(SearchTag) returns (stream ReferenceResponse) {}
  rpc SearchBy(SearchFilter) returns (stream ReferenceResponse) {}
  rpc Sync(ReferenceFilter) returns (ReferenceResponse) {}
}

service ReferencePipeService {
  rpc GetReferences(ReferenceFilter) returns (stream ReferenceResponse) {}
  rpc CountReferences(ReferenceFilter) returns (stream ReferenceResponse) {}
  rpc AddReferences(ReferenceInput) returns (stream ReferenceResponse) {}
  rpc EditReferences(ReferenceInput) returns (stream ReferenceResponse) {}
}

service SearchProductService {
  rpc Search(SearchTag) returns (stream ProductResponse) {}
  rpc SearchBy(SearchFilter) returns (stream ProductResponse) {}
  rpc Sync(ProductFilter) returns (ProductResponse) {}
}

service ProductPipeService {
  rpc GetProducts(ProductFilter) returns (stream ProductResponse) {}
  rpc CountProducts(ProductFilter) returns (stream ProductResponse) {}
  rpc AddProducts(ProductInput) returns (stream ProductResponse) {}
  rpc EditProducts(ProductInput) returns (stream ProductResponse) {}
}

message ReferenceFilter {
  repeated string ReferenceID = 1;
  google.protobuf.Struct RequestQuery = 2;
  RequestParams RequestParams = 3;
}

message ReferenceInput {
  repeated SneakerReference References = 1;
  RequestParams RequestParams = 2;
}

message ReferenceResponse {
  repeated SneakerReference References = 1;
  int64 Count = 2;
}

message RequestParams {
  int32 Limit = 1;
  int32 Offset = 2;
  string SortBy = 3;
  string SortDirection = 4;
}

message ProductFilter {
  repeated string ProductID = 1;
  google.protobuf.Struct RequestQuery = 2;
  RequestParams RequestParams = 3;
}

message ProductInput {
  repeated SneakerProduct Products = 1;
  RequestParams RequestParams = 2;
}

message ProductResponse {
  repeated SneakerProduct Products = 1;
  int64 Count = 2;
}

message SearchTag {
  string Tag = 1;
  RequestParams RequestParams = 2;
}

message SearchFilter {
  string Field = 1;
  string Value = 2;
  string SKU = 3;
  string Model = 4;
  string Brand = 5;
  RequestParams RequestParams = 6;
}
